# OMEGA-Project

./: .gitignore  API_CONTRACT.md  ARCHITECTURE.md  CMakeLists.txt  COMMERCIAL.md  LICENSE  METHOD_MATRIX.md  OMEGA_BETA.py  README.md  Run-OMEGA-Source.cmd  THREAT_MODEL.md  TROUBLESHOOTING.md  lower.cpp  omega_offline.py  pyproject.toml  pytest.ini
docs/: DEVELOPMENT.md
omega_protocol/: audit.py  errors.py  events.py  low_level.py  models.py  native_bridge.py  orchestrator.py  policy.py  runtime.py  settings.py  system.py
omega_protocol/engines/: __init__.py  drive_sanitize.py  file_sanitize.py
omega_protocol/help/: user_guide.html
omega_protocol/report_templates/: session_report.html.j2
omega_protocol/services/: __init__.py  execution.py  inventory.py  planning.py
omega_protocol/ui/: __init__.py  app.py  list_models.py  workers.py
tests/: conftest.py  test_drive_sanitize.py  test_execution_service.py  test_file_sanitize.py  test_inventory_service.py  test_native_bridge.py  test_orchestrator.py  test_planning_service.py  test_policy.py  test_reports.py  test_system.py  test_ui_app.py  test_ui_models.py
