[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-protocol"
version = "2.0.0"
description = "Transparent Windows data sanitization suite with PySide6 GUI and native storage backend."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "X-3306" }]
license = { text = "GNU Affero General Public License v3.0" }
dependencies = [
  "PySide6>=6.10,<7",
  "jinja2>=3.1,<4",
  "reportlab>=4.4,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-cov>=5,<8",
  "pytest-mock>=3.14,<4",
  "ruff>=0.11,<1",
  "mypy>=1.15,<2",
]
build = [
  "pyinstaller>=6.14,<7",
  "cmake>=3.30,<5",
]

[tool.setuptools]
py-modules = ["OMEGA_BETA", "omega_offline"]

[tool.setuptools.packages.find]
include = ["omega_protocol*"]
exclude = ["legacy*", "build*", "dist*", "reports*"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [".venv", "build", "dist", "legacy", "reports"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
pretty = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = '^(legacy|build|dist|reports|\.venv)/'

[[tool.mypy.overrides]]
module = ["reportlab.*"]
ignore_missing_imports = true
